# Copilotten.FurhatConnection

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
copilotten_furhat_bridge/: __init__.py  __main__.py  server.py
furhat_bridge/: __init__.py  __main__.py  server.py
static/: index.html
tests/: conftest.py  test_cli.py  test_package.py  test_server.py
